<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">login</string>
    <string name="password_hint">password\n</string>
    <string name="password_prompt">password1</string>
    <string name="name_hint">name_hint</string>
    <string name="name_prompt">name_prompt</string>
</resources>